Changes in 22.15
================
	* Really apply patch for SF#31110178 RH#651794
	* Conditionally use fork before stat calls

Changes in 22.14
================
  * Fix file descriptor as weel as memory leaks in fuser
	* Strip @ symbol from file names read from /proc/net/unix
	* Above 2 changes close openSuSE bugs #536209, #529520, and #417841
	  and provided by Werner Fink
	* Applied patch from Werner Fink to avoid stat(2) on NFS mounts
	* Zeros process group memory - Patch by jgorig SF#3152925 RH#666213
	* fuser -m -s flags work - Patch by jgorig SF#31110178 RH#651794
	* fuser silent if /proc/swaps not available SF#3072134
	* ppc 64 support for peekfd by jgorig SF#3166444
	* jiffies now ULL in killall SF#3138538
	* pstree can show parents of a process. Patch supplied by Curtis
	  Hawthorne SF#3135157
	* killall creates right size buffer instead of MAX_PATH Debian #623425
	* check for /proc/$$/stat not /proc/self/stat which is not available
	  on hurd platforms. Same Debian bug as above
	* fuser understands IPv6 addresses, removed comment in fuser.1 that it
	  doesn't Debian #609904
	* fuser -k only returns 0 if you kill something.
	* fuser doesn't complain if /proc/#/fd disappears SF#3310990

Changes in 22.13
================
	* configure patch for x86_64 properly applied SF#3029302 by snowman123
	* patch configure so pt_regs isn't used on SuperH. Fix by
	  Nobuhiro Iwamatsu in Debian #588986
	* Fixed configure.ac so only mipsel not mips compiles peekfd

Changes in 22.12
================
	* In fuser, switched the ipv6 and ipv4 checks around Debian #581604
	* peekfd configure patch for x86_64 SF#2986027
	* peekfd works with ARM and MIPS thanks to patch by Arnaud Patard
	* peekfd off-by-one patch applied SF#1948351
	* pstree -a doesn't segfault on grsec kernels Debian #588152

Changes in 22.11
================
	* Another attempted at killall -SIGNAME Debian #573924

Changes in 22.10
================
	* fuser -k -m ... won't kill itself Debian #562767